--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <!-- templates/home.html -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
