--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,32 @@
-<!-- templates/home.html -->
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    {% load static %}  
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Correção do caminho do CSS -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    
 </head>
 <body>
-    <h1>Welcome to the Home Page</h1>
+    <div class="bg-image">
+        <div class="navbar">
+            <a href="{% url 'home' %}">HOME</a>
+            <a href="{% url 'destination_list' %}">DESTINOS</a>
+            <a href="#">CONTATO</a>
+            <a href="#">SOBRE</a>
+            <div class="login-register">
+                <a href="{% url 'login' %}">LOGIN</a>
+                <a href="{% url 'register' %}">CADASTRO</a>
+            </div>
+        </div>
+        <div class="content">
+            <h1>EXPLORE O MUNDO</h1>
+            <p>TESTETESTETESTETESTETESTE</p>
+            <a href="#">VEM CONFERIR</a>
+        </div>
+    </div>
 </body>
 </html>
