--- a/templates/home.html
+++ b/templates/home.html
@@ -62,13 +62,14 @@
         .navbar {
             position: absolute;
             top: 20px;
-            right: 20px;
             display: flex;
+            justify-content: center;
             gap: 80px;
-            width: 70%;
+            width: 100%;
+
         }
         .navbar .login-register {
-            padding-left: 30%;
+            padding-left: 20%;
         }
 
         .navbar a {
@@ -91,6 +92,7 @@
             <a href="{% url 'destination_list' %}">DESTINOS</a>
             <a href="#">CONTATO</a>
             <a href="#">SOBRE</a>
+            <a href="{% url 'wishlist_view' %}">Desejos</a>
             <div class="login-register">
                 <a href="{% url 'login' %}">LOGIN</a>
                 <a href="{% url 'register' %}">CADASTRO</a>
