--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -30,7 +30,38 @@
             height: 100%;
             object-fit: cover;
         }
+        .navbar {
+            position: fixed;
+            top: 0px;
+            right: 0px;
+            width: 100%;
 
+            display: flex;
+            justify-content: space-between;
+            align-items: center; /* Alinha itens verticalmente */
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            z-index: 1000; /* Garantir que o navbar fique por cima do conteúdo */
+            padding: 0 20px; /* Espaçamento interno lateral */
+            box-sizing: border-box; /* Inclui padding na largura total */
+            height: 50px; /* Altura fixa para o navbar */
+        }
+
+        .navbar a {
+            color: white;
+            text-decoration: none;
+            font-weight: 700;
+            padding: 0 10px; /* Ajuste de padding lateral */
+            line-height: 50px; /* Alinha verticalmente com base na altura do navbar */
+        }
+
+        .navbar a:hover {
+            text-decoration: underline;
+        }
+
+        .login-register {
+            display: flex;
+            align-items: center;
+        }
         /* Container do formulário de login */
         .login-container {
             position: relative;
@@ -101,6 +132,17 @@
             Seu navegador não suporta o elemento de vídeo.  
         </video>
     </div>
+     <div class="navbar">
+            <a href="{% url 'home' %}">HOME</a>
+            <a href="{% url 'destination_list' %}">DESTINOS</a>
+            <a href="#">CONTATO</a>
+           <a href="{% url 'about' %}">SOBRE</a>
+            <a href="{% url 'wishlist_view' %}">DESEJOS</a>
+            <div class="login-register">
+                <a href="{% url 'login' %}">LOGIN</a>
+                <a href="{% url 'register' %}">CADASTRO</a>
+            </div>
+        </div>
 
     <!-- Container do login -->
     <div class="login-container">
