--- a/templates/wishlist_view.html
+++ b/templates/wishlist_view.html
@@ -12,7 +12,7 @@
             color: #333;
             text-align: center;
             margin: 0;
-            padding-top: 60px; /* Espaço para o navbar fixo */
+            padding-top: 60px; 
         }
 
         .navbar {
