--- a/templates/about.html
+++ b/templates/about.html
@@ -7,13 +7,17 @@
      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'roboto', sans-serif;
-            background-color: #e7f0f7;
-            color: black;
-            margin: 0;
-            padding: 0;
-        }
-       
+    font-family: 'roboto', sans-serif;
+    background-color: #e7f0f7; /* Cor de fundo de fallback caso a imagem não carregue */
+    background-image: url('/media/assets_images/aboutbg.jpg');
+    background-size: cover; 
+    background-position: center; 
+    background-attachment: fixed; 
+    color: black;
+    margin: 0;
+    padding: 0;
+}
+
 
         .header {
             background-size: cover;
@@ -32,23 +36,23 @@
             top: 0px;
             right: 0px;
             width: 100%;
-            background-color: #4a90e2; /* Cor do fundo azul */
+            background-color: #4a90e2; 
             display: flex;
             justify-content: space-between;
-            align-items: center; /* Alinha itens verticalmente */
+            align-items: center; 
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-            z-index: 1000; /* Garantir que o navbar fique por cima do conteúdo */
-            padding: 0 20px; /* Espaçamento interno lateral */
-            box-sizing: border-box; /* Inclui padding na largura total */
-            height: 50px; /* Altura fixa para o navbar */
+            z-index: 1000; 
+            padding: 0 20px; 
+            box-sizing: border-box; 
+            height: 50px; 
         }
 
         .navbar a {
             color: white;
             text-decoration: none;
             font-weight: 700;
-            padding: 0 10px; /* Ajuste de padding lateral */
-            line-height: 50px; /* Alinha verticalmente com base na altura do navbar */
+            padding: 0 10px; 
+            line-height: 50px; 
         }
 
         .navbar a:hover {
@@ -67,6 +71,7 @@
         .header p {
             margin: 10px 0 0;
             font-size: 1.5em;
+            font-weight: 700;
         }
 
         .services {
@@ -74,15 +79,18 @@
             justify-content: space-around;
             margin: 20px 0;
             padding: 20px;
-            background-color: #333;
+
+
         }
 
         .service {
             text-align: center;
             width: 20%;
             padding: 10px;
-            background-color: #FF7F50;
+            background-color: #4a90e2;
             border-radius: 8px;
+            font-weight: 700;
+            ;
         }
 
         .service img {
@@ -98,27 +106,6 @@
             margin-bottom: 20px;
         }
 
-        .call-to-action {
-            text-align: center;
-            margin: 40px 0;
-        }
-
-        .call-to-action button {
-            background-color: #FF7F50;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            font-size: 1.2em;
-            cursor: pointer;
-        }
-
-        .footer {
-            background-color: #444;
-            text-align: center;
-            padding: 20px;
-            color: white;
-        }
     </style>
 </head>
 <body>
@@ -134,40 +121,53 @@
             </div>
         </div>
     <div class="header">
-        <h1>Agência de Viagens Wanderlust</h1>
-        <p>Sobre nós</p>
+        <h1>SOBRE A GENTE</h1>
+        <p>VEM NOS CONHECER!</p>
     </div>
 
     <div class="services">
         <div class="service">
-            <img src="path-to-icon1.png" alt="Icon 1">
-            <h3>Passeios</h3>
-            <p>Descrição dos passeios organizados pela agência.</p>
+            <img src="/media/assets_images/pessoas-juntas-icon.png" alt="Icon 1">
+            <h3>Quem somos?</h3>
+            <p>Somos um grupo independente de entusiastas de viagens, dedicados a compartilhar
+                nossa paixão por explorar o mundo! Criamos este site para oferecer informações
+                detalhadas e inspiradoras sobre destinos ao redor do planeta, com o objetivo de
+                ajudar outros amantes de viagens a planejar suas próximas aventuras. Aqui, você
+                encontrará dicas, histórias e insights de viajantes que, como você, buscam descobrir
+                o melhor que o mundo tem a oferecer. Junte-se a nós e deixe-se inspirar para sua
+                próxima jornada!</p>
         </div>
         <div class="service">
-            <img src="path-to-icon2.png" alt="Icon 2">
-            <h3>Caminhadas</h3>
-            <p>Descrição das caminhadas e trilhas organizadas pela agência.</p>
+            <img src="/media/assets_images/ponto-de-interrogacao-icon.png" alt="Icon 2">
+            <h3>Oque queremos?</h3>
+            <p>Nosso objetivo é proporcionar uma fonte confiável e envolvente de informações para
+                todos os apaixonados por viagens. Queremos inspirar e informar, oferecendo uma visão
+                profunda e detalhada de destinos ao redor do mundo. Nosso compromisso é reunir
+                conteúdo relevante e atualizado, ajudando você a planejar suas aventuras com
+                confiança e entusiasmo. Buscamos criar uma comunidade de viajantes curiosos e
+                bem-informados, compartilhando experiências e descobertas que enriquecem cada jornada.</p>
         </div>
         <div class="service">
-            <img src="path-to-icon3.png" alt="Icon 3">
-            <h3>Viagem</h3>
-            <p>Descrição das viagens organizadas pela agência.</p>
+            <img src="/media/assets_images/nossa-filosofia-icon.png" alt="Icon 3">
+            <h3>Nossa filosofia</h3>
+            <p>Acreditamos que cada viagem é uma oportunidade única para explorar e
+                entender o mundo de novas maneiras. Nossa filosofia é baseada na autenticidade
+                e na paixão por viagens verdadeiras. Procuramos apresentar informações que não
+                só inspiram, mas também ajudam a planejar experiências genuínas. Valorizamos a
+                diversidade cultural e buscamos mostrar os destinos através das lentes dos
+                viajantes, com dicas e insights que vão além dos guias tradicionais..</p>
         </div>
         <div class="service">
-            <img src="path-to-icon4.png" alt="Icon 4">
-            <h3>Apoiar</h3>
-            <p>Como a agência pode ajudar e apoiar os viajantes.</p>
+            <img src="/media/assets_images/contribua-conosco-icon.png" alt="Icon 4">
+            <h3>Contribua conosco!</h3>
+            <p>Adoramos ouvir histórias e experiências de outros viajantes! Se você
+                tem uma aventura incrível para compartilhar ou uma dica valiosa sobre
+                um destino, entre em contato conosco. Sua contribuição pode ajudar a
+                enriquecer nosso conteúdo e inspirar outros viajantes a explorar novos
+                lugares. Juntos, podemos criar uma rica comunidade de entusiastas de viagens
+                que compartilham a mesma paixão por descobrir o mundo. .</p>
         </div>
     </div>
 
-    <div class="call-to-action">
-        <h2>O mundo é um lugar grande. Nós o ajudaremos a explorá-lo.</h2>
-        <button>Comece sua jornada agora!</button>
-    </div>
-
-    <div class="footer">
-        <p>Recreação ao ar livre</p>
-    </div>
 </body>
 </html>
