--- a/templates/home.html
+++ b/templates/home.html
@@ -66,20 +66,20 @@
             width: 100%;
             display: flex;
             justify-content: space-between;
-            align-items: center; /* Alinha itens verticalmente */
+            align-items: center; 
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-            z-index: 1000; /* Garantir que o navbar fique por cima do conteúdo */
-            padding: 0 20px; /* Espaçamento interno lateral */
-            box-sizing: border-box; /* Inclui padding na largura total */
-            height: 50px; /* Altura fixa para o navbar */
+            z-index: 1000; 
+            padding: 0 20px; 
+            box-sizing: border-box; 
+            height: 50px; 
         }
 
         .navbar a {
             color: white;
             text-decoration: none;
             font-weight: 700;
-            padding: 0 10px; /* Ajuste de padding lateral */
-            line-height: 50px; /* Alinha verticalmente com base na altura do navbar */
+            padding: 0 10px; 
+            line-height: 50px; 
         }
 
         .navbar a:hover {
