--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -135,8 +135,8 @@
      <div class="navbar">
             <a href="{% url 'home' %}">HOME</a>
             <a href="{% url 'destination_list' %}">DESTINOS</a>
-            <a href="#">CONTATO</a>
-           <a href="{% url 'about' %}">SOBRE</a>
+            <a href="{% url 'contact' %}">CONTATO</a>
+            <a href="{% url 'about' %}">SOBRE</a>
             <a href="{% url 'wishlist_view' %}">DESEJOS</a>
             <div class="login-register">
                 <a href="{% url 'login' %}">LOGIN</a>
