--- a/templates/wishlist_view.html
+++ b/templates/wishlist_view.html
@@ -176,7 +176,7 @@
     <div class="navbar">
         <a href="{% url 'home' %}">HOME</a>
         <a href="{% url 'destination_list' %}">DESTINOS</a>
-        <a href="#">CONTATO</a>
+        <a href="{% url 'contact' %}">CONTATO</a>
         <a href="{% url 'about' %}">SOBRE</a>
         <a href="{% url 'wishlist_view' %}">DESEJOS</a>
         <div class="login-register">
