--- a/templates/wishlist_view.html
+++ b/templates/wishlist_view.html
@@ -180,9 +180,17 @@
         <a href="{% url 'about' %}">SOBRE</a>
         <a href="{% url 'wishlist_view' %}">DESEJOS</a>
         <div class="login-register">
-            <a href="{% url 'login' %}">LOGIN</a>
-            <a href="{% url 'register' %}">CADASTRO</a>
-        </div>
+    {% if user.is_authenticated %}
+        <form method="POST" action="{% url 'logout' %}">
+            {% csrf_token %}
+            <button type="submit">Desconectar</button>
+        </form>
+    {% else %}
+        <a href="{% url 'login' %}">LOGIN</a>
+        <a href="{% url 'register' %}">CADASTRO</a>
+    {% endif %}
+</div>
+
     </div>
 
     <h1>Minha Lista de Desejos</h1>
